--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
    							 <td>2022/09/21</td>
    							 <td>2022/09/21</td>
 						</tr>
+						
+						<td><a href = "FINN.html">FINN.html v0.3</a></td>
+							 <td>SD</td>
+   							 <td>none</td>
+   							 <td>2022/09/26</td>
+   							 <td>2022/09/26</td>
+						</tr>
 					</table>
 				
 	
