--- a/index.html
+++ b/index.html
@@ -216,6 +216,12 @@
    							 <td>2022/09/26</td>
    							 <td>2022/09/26</td>
 						</tr>
+						<td><a href = "Vitis_AI.html">Vitis_AI.html v0.3</a></td>
+							 <td>SD</td>
+   							 <td>none</td>
+   							 <td>2022/10/14</td>
+   							 <td>2022/10/14</td>
+						</tr>
 					</table>
 				
 	
