--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
    							 <td>2022/11/18</td>
 						</tr>
 						<tr>
-   							 <td><a href = "F4PGA_toolchain guide.html">F4PGA_toolchain guide (not ready)</a></td>
+   							 <td><a href = "F4PGA toolchain.html">F4PGA_toolchain guide (not ready)</a></td>
 							 <td>Edge</td>
    							 <td>none</td>
    							 <td>2022/05/13</td>
