--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
     							<th>CreationDate</th>
     							<th>LastModifiedDate</th>
  						 </tr>
+						<tr>
+   							 <td><a href = "PlatformWorkflow.pdf">PlatformWorkflow.pdf</a></td>
+							  <td>General</td>
+   							 <td><a href = "">None</a></td>
+   							 <td>2023/01/11</td>
+   							 <td>2023/01/11</td>
+						</tr>
 						 <tr>
    							 <td><a href = "industry-4.0.pdf">Industry-4.0.pdf</a></td>
 							  <td>General</td>
